tests/miniJava/neg/005709_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } length class java { }
